--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 			height:500px;
 			width:500px;
 			background-image:
-			url(https://i.pinimg.com/564x/01/e9/31/01e9316d6d2b718366d54edc99228519.jpg);
+			url(star.png);
 
+		}
+		body{
+			background-image:
+			url(background.png)
+			;
+			background-size: cover;
 		}
 
 	</style>
