adding second star

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
 	
 	<style type="text/css">
+		#star{
+			height:500px;
+			width:500px;
+			background-image:
+			url(star.png);
+
+		}
+
 		#heart{
 			height:500px;
 			width:500px;
@@ -10,6 +18,7 @@
 			url(star.png);
 
 		}
+
 		body{
 			background-image:
 			url(background.png)
@@ -21,9 +30,18 @@
 	
 </head>
 <body>
+
 <a href="projects.html">
+
+	<div id="star"></div>
+
+</a>
+
+
+<a href="journal.html">
 	<div id="heart"></div>
 
 </a>
+
 </body>
 </html>
