--- a/journal.html
+++ b/journal.html
@@ -15,14 +15,22 @@
 		 }
 		
 	</style>
+
+	<style type="text/css">
+		{background-color: blue;}
+	</style>
 	<title></title>
 </head>
+
 <body>
-	<h1>1st week of Comp Sci 1: </h1>
+	<h1>Journal entry one - 9/21/23 </h1>
 
 	<p>
-	To save my journal to the internet, I went onto my terminal and I opened my folder from my desktop. I then found a font and I copied it into Sublime and my terminal. I git added, committed and pushed the font on my terminal so it was then online. I wrote "git add ." then "git commit -m "adding font" and then git push to connect it all. I then went to my journal website and I found my text that I typed on sublime there.
+	To save my journal to the internet, I went onto my terminal and I opened my folder from my desktop. I then found a font and I copied it into Sublime and my terminal. I git added, committed and pushed the font on my terminal so it was then online. I wrote "git add ." then "git commit -m "adding font" and then git push to connect it all. I then went to my journal website and I found my text that I typed on sublime there. </p>
 
-</p>
+	<h1>Journal entry two - 9/26/23 </h1>
+	<p>
+	Today we had our fourth class of computer science. We worked on our website profiles and I made one with a blue star on it.
+	</p>
 </body>
 </html>
