molly adding animation project

--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	hi
+	Welcome to my projects page.
 </head>
 <body>
+ 
+
+
+ <p>
+<a href="square.html">here is a link</a> to my first project.
+
+</p>
+
+<a href="square2.html">here is a link</a> to my second project.
+
+</p>
+
+
 
 </body>
 </html>
