--- a/square.html
+++ b/square.html
@@ -3,17 +3,17 @@
 <head>
 	<style type="text/css">
 		#julia{
-			width:800px;
-			height:600px;
-			background-color:turquoise;
+			width:1300px;
+			height:1300px;
+			background-color:darkblue;
 			
 
-			transition:1.5s;
-			background-image:url(https://i.pinimg.com/originals/1a/69/1d/1a691d35add342af8bda0d77bb9e3d8b.gif);
+			transition:2s;
+			background-image:url(https://i.pinimg.com/originals/76/87/f4/7687f41886b35677b63ccfb579d8c516.gif);
 
 		}
 		#julia:hover{
-			background-color:pink;
+			background-color:lightcyan;
 		}
 	</style>
 </head>
