--- a/index.html
+++ b/index.html
@@ -3,19 +3,44 @@
 <head>
 	
 	<style type="text/css">
-		#star{
-			height:500px;
-			width:500px;
-			background-image:
-			url(star.png);
+
+		.stars{
+			height:300px;
+			width:300px;
+			display:inline-block;
+			background-size:contain;
+			background-repeat: no-repeat;
+			font-family:courier;
+
 
 		}
 
-		#heart{
-			height:500px;
-			width:500px;
+		.text{
+			position:relative;
+			top:100%;
+			color:white;
+		}
+		#darkstar{
+			
+			background-image:
+			url(darkstar.png);
+			
+			
+
+
+		}
+
+		#star{
+			
 			background-image:
 			url(star.png);
+		
+		}
+
+		#lightstar{
+			
+			background-image:url(lightstar.png);
+			
 
 		}
 
@@ -26,22 +51,46 @@
 			background-size: cover;
 		}
 
+		
+
 	</style>
 	
 </head>
 <body>
 
+<br><br><br><br><br><br><br><br>
+<center>
+
 <a href="projects.html">
 
-	<div id="star"></div>
+	<div class="stars" id="darkstar">
 
-</a>
+	<div class="text"> text</div>
+
+		</div>
+
+	</a>
 
 
 <a href="journal.html">
-	<div id="heart"></div>
+	<div class="stars" id="star">
+
+	<div class="text"> text
+	</div>
+
+</div>
 
 </a>
+
+<a href="aboutme.html">
+	<div class="stars" id="lightstar">
+		<div class="text"> text</div>
+	</div>
+</a>
+
+
+
+</center>
 
 </body>
 </html>
