--- a/journal.html
+++ b/journal.html
@@ -10,15 +10,19 @@
 	<title></title>
 
 	<style type="text/css">
-		h1{ 
+		h1
+		{ 
+			background-color: violet;
 		font-family: 'Patrick Hand', cursive;
 		 }
 		
+		body{background-color: lightblue;}
+
+
+
+
 	</style>
 
-	<style type="text/css">
-		{background-color: blue;}
-	</style>
 	<title></title>
 </head>
 
