--- a/animation.html
+++ b/animation.html
@@ -42,11 +42,15 @@
 			100%{
 			width:100px;
 			height:100px;
-			
+
 
 			}
 
 			
+		}
+
+		body{
+			background-color: violet;
 		}
 </style>
 
