--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Arsenal&family=Patrick+Hand&display=swap" rel="stylesheet">
 	
 	<style type="text/css">
 
@@ -11,6 +14,7 @@
 			background-size:contain;
 			background-repeat: no-repeat;
 			font-family:courier;
+			\
 
 
 		}
@@ -18,7 +22,8 @@
 		.text{
 			position:relative;
 			top:100%;
-			color:white;
+			color:navy;
+			font-family: 'Arsenal';
 		}
 		#darkstar{
 			
@@ -65,7 +70,7 @@
 
 	<div class="stars" id="darkstar">
 
-	<div class="text"> text</div>
+	<div class="text"> projects</div>
 
 		</div>
 
@@ -75,7 +80,7 @@
 <a href="journal.html">
 	<div class="stars" id="star">
 
-	<div class="text"> text
+	<div class="text"> journal
 	</div>
 
 </div>
@@ -84,7 +89,7 @@
 
 <a href="aboutme.html">
 	<div class="stars" id="lightstar">
-		<div class="text"> text</div>
+		<div class="text"> about me</div>
 	</div>
 </a>
 
