--- a/journal.html
+++ b/journal.html
@@ -36,5 +36,10 @@
 	<p>
 	Today we had our fourth class of computer science. We worked on our website profiles and I made one with a blue star on it.
 	</p>
+
+	<h1>Journal entry three - 10/3/23 </h1>
+	<p>
+	Today we made an animation and then we put it online. I made a square that changes colors and spins into a circle. It was really fun and I learned that I needed to make percentages (0-100) for the animation to follow. I added what I wanted it to do to each percentage and then I put it online.
+	</p>
 </body>
 </html>
