--- a/aboutme.html
+++ b/aboutme.html
@@ -10,6 +10,14 @@
 	<title></title>
 
 	<style type="text/css">
+		h1
+		{ 
+			background-color: hotpink;
+			color:mistyrose;
+
+		 }
+		
+		body{background-color: lavender;}
 
 
 
@@ -20,6 +28,9 @@
 </head>
 
 <body>
+	<h1>ABOUT ME </h1>
+	<p>
+	Hi! My name is Julia and I'm in 9th grade.....(will add more later) </p>
 	
 </body>
 </html>
