--- a/journal.html
+++ b/journal.html
@@ -14,9 +14,18 @@
 		{ 
 			background-color: violet;
 		font-family: 'Patrick Hand', cursive;
+		color:floralwhite;
 		 }
 		
-		body{background-color: lightblue;}
+		body{
+			background-color: lightblue;}
+		
+		p{
+			font-family: 'Patrick Hand', cursive;
+		color:floralwhite;
+		}
+		
+
 
 
 
@@ -40,6 +49,10 @@
 	<h1>Journal entry three - 10/3/23 </h1>
 	<p>
 	Today we made an animation and then we put it online. I made a square that changes colors and spins into a circle. It was really fun and I learned that I needed to make percentages (0-100) for the animation to follow. I added what I wanted it to do to each percentage and then I put it online.
+	</p>
+	<h1>Journal entry four - 10/12/23 </h1>
+	<p>
+	Today we learned a new language, javascript. We made boxes and we inspected the page to learn about the margin, border, and padding. We then wrote "document.addEventListener" which makes the page listen for something and record the event. I chose to make it log the mousemove but I can also make it log the "keypress” and “click”. It recorded whenever I moved my mouse and the data about it in the console page when I press inspect. If I don't put event, it doesn't record the data from what I did like where on the screen my mouse was.
 	</p>
 </body>
 </html>
