--- a/projects.html
+++ b/projects.html
@@ -1,22 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-	Welcome to my projects page.
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Arsenal&family=Nunito:wght@300&family=Patrick+Hand&display=swap" rel="stylesheet">
+
+	<style type="text/css">
+		
+	body{background-color: lavender;
+		
+		}
+
+		p{
+		font-family: 'nunito';
+		color:indigo;
+		font-size:20px;
+		}
+
+		a{font-family: 'nunito';
+		color:indigo;
+				font-size:20px;
+	}
+	h1{
+		color:indigo;
+		background-color: white;
+	}
+
+		
+
+
+
+
+	</style>
 </head>
 <body>
  
+	<h1>♡Welcome to my projects page!♡</h1>
 
 
  <p>
-<a href="square.html">here is a link</a> to my first project.
+<a href="square.html">⭑here is a link</a> to my first project.
 
 </p>
 
-<a href="square2.html">here is a link</a> to my second project.
+<p>
+<a href="console.html">⭑here is a link</a> to my second project.
 
 </p>
 
-<a href="animation.html">here is a link</a> to my third project.
+
+<p>
+<a href="animation.html">⭑here is a link</a> to my third project.
+
+</p>
+<p>
+<a href="boxes.html">⭑here is a link</a> to my fourth project.
 
 </p>
 
