--- a/journal.html
+++ b/journal.html
@@ -54,5 +54,9 @@
 	<p>
 	Today we learned a new language, javascript. We made boxes and we inspected the page to learn about the margin, border, and padding. We then wrote "document.addEventListener" which makes the page listen for something and record the event. I chose to make it log the mousemove but I can also make it log the "keypress” and “click”. It recorded whenever I moved my mouse and the data about it in the console page when I press inspect. If I don't put event, it doesn't record the data from what I did like where on the screen my mouse was.
 	</p>
+	<h1>Journal entry five - 10/26/23 </h1>
+	<p>
+	Today and throughout this week we learned how to use event listeners. We made it so that the website would listen for a click and then when clicked, a jumpscare gif would come up. This class we learned to add a soound by downloading it off of youtube and adding it to the event listener so when someone would click on the website, the gif and sound would come up.
+	</p>
 </body>
 </html>
