--- a/projects.html
+++ b/projects.html
@@ -59,6 +59,10 @@
 <a href="boxes.html">⭑here is a link</a> to my fourth project.
 
 </p>
+<p>
+<a href="jumpscare.html">⭑here is a link</a> to my fifth project.
+
+</p>
 
 
 
