--- a/journal.html
+++ b/journal.html
@@ -39,7 +39,7 @@
 	<h1>Journal entry one - 9/21/23 </h1>
 
 	<p>
-	To save my journal to the internet, I went onto my terminal and I opened my folder from my desktop. I then found a font and I copied it into Sublime and my terminal. I git added, committed and pushed the font on my terminal so it was then online. I wrote "git add ." then "git commit -m "adding font" and then git push to connect it all. I then went to my journal website and I found my text that I typed on sublime there. </p>
+	To save my journal to the internet, I went onto my terminal and I go into my folder from my terminal by typing cd ./desktop/juliahale.github.io. I git added, committed and pushed the font on my terminal so it was then online. I wrote "git add ." then "git commit -m "adding font" and then git push to connect it all. I then went to my journal website and I found my text that I typed on sublime there. </p>
 
 	<h1>Journal entry two - 9/26/23 </h1>
 	<p>
@@ -56,7 +56,13 @@
 	</p>
 	<h1>Journal entry five - 10/26/23 </h1>
 	<p>
-	Today and throughout this week we learned how to use event listeners. We made it so that the website would listen for a click and then when clicked, a jumpscare gif would come up. This class we learned to add a soound by downloading it off of youtube and adding it to the event listener so when someone would click on the website, the gif and sound would come up.
+	Today and throughout this week we learned how to use event listeners. We made it so that the website would listen for a click and then when clicked, a jumpscare gif would come up. This class we learned to add a sound by downloading it off of Youtube and adding it to the event listener so when someone would click on the website, the gif and sound would come up. We first added our jumpscare image, for example I made an oval and I made seperate divs for each oval. To make the event listener, we first wrote "document.addEventListener" and then wrote "click" so that the website would listen for the click of the mouse. It can be used for "mousemove" or other things that the website can track also. We then wrote "console.log(event)" so that whenever the website would be clicked, it would show up in the console of the website when you press inspect. Instead of event, I used x as a variable to tell the website to show my jumpscares (1-4), based on how many times the website was pressed. No jumpscares was when x=0. It would count how many times the website was clicked, represented by x and then every time my website would be clicked, the x count would go up by one. I then used the divs that I had made for each oval/jumpscare and coded it so that when x= a certain number (1-4), the ovals would show up in that order according to the clicks. I also added a sound under the box 1 variable so when x=1, the sound would play.
+	My questions about event listeners from the video:
+	1. 3:10 - Does "event" refer to just like when you click or do the function or does it refer to what happens to anything on the website? what exactly is the event?
+	2. 6:21 - Why did you make it "bob.style.backgroundColor" and not code it like we normally would for a background color? What is the difference in the phrasing like this?
+	3. What is the difference between variable/"var" and "div" ? You used "var box =" and so did I but I also used div in a lot of places, and what is the difference? 
+
+
 	</p>
 </body>
 </html>
