--- a/jumpscare.html
+++ b/jumpscare.html
@@ -49,7 +49,7 @@
 </head>
 
 <body>
-	<h1>click for a suprise </h1>
+	<h1>click for a surprise </h1>
 	<div id="box1" class ="box"></div>
 	<div id="box2" class = "box"></div>
 	<div id="box3" class = "box"></div>
