adding dad present

--- a/Dadbday.html
+++ b/Dadbday.html
@@ -21,7 +21,7 @@
 */
 .box {
 /*    display: table-cell;*/
-    background-image: url(celebrationemoji.PNG);
+    background-image: url(celebrationemoji.png);
     height: 170px;
     width: 170px;
 	background-size: contain;
@@ -47,23 +47,23 @@ body{
  
 }
 #box2:hover{
-	background-image: url(surfingdad.JPG);
+	background-image: url(surfingdad.jpg);
  
 }
 #box3:hover{
-	background-image: url(dadski1.JPG);
+	background-image: url(dadski1.jpg);
  
 }
 #box4:hover{
-	background-image: url(dadknotts.JPG);
+	background-image: url(dadknotts.jpg);
  
 }
 #box5:hover{
-	background-image: url(dadrafting.JPG);
+	background-image: url(dadrafting.jpg);
  
 }
 #box6:hover{
-	background-image: url(dadhug.JPG);
+	background-image: url(dadhug.jpg);
  
 }
 #box7:hover{
@@ -71,47 +71,47 @@ body{
  
 }
 #box8:hover{
-	background-image: url(dadsteps.JPG);
+	background-image: url(dadsteps.jpg);
  
 }
 #box9:hover{
-	background-image: url(dadwork.JPG);
+	background-image: url(dadwork.jpg);
  
 }
 #box10:hover{
-	background-image: url(dadsunset.JPG);
+	background-image: url(dadsunset.jpg);
  
 }
 #box11:hover{
-	background-image: url(dadkindergarten.JPG);
+	background-image: url(dadkindergarten.jpg);
  
 }
 #box12:hover{
-	background-image: url(christmasdad.JPG);
+	background-image: url(christmasdad.jpg);
  
 }
 #box13:hover{
-	background-image: url(dadmexico.JPG);
+	background-image: url(dadmexico.jpg);
  
 }
 #box14:hover{
-	background-image: url(dadmv.JPG);
+	background-image: url(dadmv.jpg);
  
 }
 #box15:hover{
-	background-image: url(dadparis.JPG);
+	background-image: url(dadparis.jpg);
  
 }
 #box16:hover{
-	background-image: url(dadgreece2.JPG);
+	background-image: url(dadgreece2.jpg);
  
 }
 #box17:hover{
-	background-image: url(dadspain.JPG);
+	background-image: url(dadspain.jpg);
  
 }
 #box18:hover{
-	background-image: url(dadgreece.JPG);
+	background-image: url(dadgreece.jpg);
  
 }
 
