fixing image that's surfing dad

--- a/Dadbday.html
+++ b/Dadbday.html
@@ -118,10 +118,10 @@ body{
 </style>
 </head>
 <body>
-	<audio id="sound" src=""></audio>
 <h1>Happy birthday dad!</h1> 
 <p>Hover over each image to see a picture of a great memory that I have with you:<p/>
 
+	<audio id="song" src="bday.mp3"></audio>
 
 
 
@@ -166,19 +166,16 @@ body{
 	<br>Love,
 	<br>Julia<p/>
 <div id="message">
-	<p></p>
 </div>
 <div id="heart"></div>
 
-
-	<audio id="sound" src="bday.mp3"></audio>
 
 
 </div>
 <script type="text/javascript">
 
 	document.addEventListener("click", function(){
-		sound.play();
+		song.play()
 	})
 </script>	
 </body>
