adding journal update

--- a/grandmabday.html
+++ b/grandmabday.html
@@ -2,12 +2,28 @@
 
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title></title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alkalami&family=Bungee+Spice&family=Courgette&family=Overpass:ital,wght@1,700;1,900&family=Roboto+Condensed:ital,wght@1,700&family=Sora&display=swap" rel="stylesheet">
 	<h1>
-		click on the present!
+		Click on the present!
 	</h1>
 
 	<title></title>
 	<style type="text/css">
+
+body{
+	margin: 20px;
+		background-color:lightpink;
+		font-family: 'Courgette', cursive;
+		text-decoration: none;
+				color:floralwhite;
+		font-size: 35px;
+
+}
 
 		#present{
 			width:400px;
@@ -21,6 +37,7 @@
 
 <body>
 
+
 	<center><div id="present">
 	</div>
 </center>
@@ -32,17 +49,33 @@
 		count = count+1;
 		console.log(count)
 		if (count == 1){
-			present.style.backgroundImage ="url(https://i.pinimg.com/564x/01/e9/31/01e9316d6d2b718366d54edc99228519.jpg)"
+			present.style.backgroundImage ="url(grandpacouch.jpg)"
 		}
 		if (count == 2){
-			present.style.backgroundImage ="url()"
+			present.style.backgroundImage ="url(grandmacookies.jpg)"
 		}
 		if (count == 3){
+			present.style.backgroundImage ="url(grandparentsflorida.jpg)"
+		}
+		if (count == 4){
+			present.style.backgroundImage ="url(famsilo.jpg)"
+		}
+		if (count == 5){
+			present.style.backgroundImage ="url()"
+		}
+		if (count == 6){
+			present.style.backgroundImage ="url()"
+		}
+		if (count == 7){
 			present.style.backgroundImage ="url()"
 		}
 	})
+
+
 	
 </script>
-
+<p>Happy birthday Grandma and Grandpa! I love you so much.🎉🎂✨🍰🥳
+	<br>Love,
+	<br>Julia<p/>
 </body>
 </html>
