adding journal updates for hw

--- a/journal.html
+++ b/journal.html
@@ -64,5 +64,9 @@
 
 
 	</p>
+	<h1>Journal entry six - 11/16/23 </h1>
+	<p>
+	My gratitude card is a birthday card for my Dad whose birthday was on the 13th. Whenever you hover over one of the emojis, it turns into a picture of my Dad and I. My biggest struggle was trying to make all of the photos work, because originally I didn't realize that the capitalizations in some parts had to match up wiht the downloaded versions on my desktop. There was also one certain photo that wouldn't show up no matter what, and we had to do a lot of trouble-shooting to get it to work. I also put a song in, so when the website was clicked anywhere, the birthday song plays.
+	</p>
 </body>
 </html>
