--- a/journal.html
+++ b/journal.html
@@ -68,5 +68,18 @@
 	<p>
 	My gratitude card is a birthday card for my Dad whose birthday was on the 13th. Whenever you hover over one of the emojis, it turns into a picture of my Dad and I. My biggest struggle was trying to make all of the photos work, because originally I didn't realize that the capitalizations in some parts had to match up wiht the downloaded versions on my desktop. There was also one certain photo that wouldn't show up no matter what, and we had to do a lot of trouble-shooting to get it to work. I also put a song in, so when the website was clicked anywhere, the birthday song plays.
 	</p>
+	<h1>Journal entry seven - 11/28/23 </h1>
+	<p>
+	Using ChatGPT to answer questions and what I've learned:
+	1. Why does html use angle brackets? Why does CSS use curly brackets?
+	Angle brackets are used for the frame or structure of something and to tell where something starts or ends. HTML uses angle brackets to structure content like paragraphs and headings. Curly brackets are CSS and are used to decorate and style the content. CSS uses curly brackets to group together style rules and to hold those style instructions.
+	2. How do you position a div on a screen? What is absolute vs. relative vs. fixed? 
+	Positioning a div:
+	A div can be positioned with three ways: relative, absolute and fixed. Relative positioning means that the div moves based on where it would be originally, without affecting the other things around it. Absolute just follows specific instructions and means that the div is positioned exactly where you tell it, and not mattering what else is around it. Fixed means that the div will always stay in the same spot even if you scroll down or up on the website.
+	3. What is the difference between a parent and a child and why do we have to use it?
+	A parent element can be compared to a big box that holds other elements inside of it, and a child element is inside another element which is its parent. It's like something inside a box. Children and parents are important because they can be used to organize content on a website, styling and positioning, and to use javascript interaction.
+	4. What’s the difference between ‘==’, ‘===’, and ‘=’
+	One = is used to assign a value to the variable. 2 (double) is used to check if values are equal after they are being converted to something or changed. 3 is used to compare equalities and it can check the value and type of something and see if its like true or false.
+	</p>
 </body>
 </html>
