--- a/snowman.html
+++ b/snowman.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<h1>
+		Click on the pictures and then on the snowman to decorate it!
+	</h1>
 	<title></title>
 	<style type="text/css">
 		#snowman{
