--- a/journal.html
+++ b/journal.html
@@ -39,7 +39,7 @@
 	<h1>Journal entry one - 9/21/23 </h1>
 
 	<p>
-	To save my journal to the internet, I went onto my terminal and I go into my folder from my terminal by typing cd ./desktop/juliahale.github.io. I git added, committed and pushed the font on my terminal so it was then online. I wrote "git add ." then "git commit -m "adding font" and then git push to connect it all. I then went to my journal website and I found my text that I typed on sublime there. </p>
+	To save my journal to the internet, I went onto my terminal and I go into my folder from my terminal by typing cd ./desktop/juliahale.github.io/ I git added, committed and pushed the font on my terminal so it was then online. I wrote "git add ." then "git commit -m "adding font" and then git push to connect it all. I then went to my journal website and I found my text that I typed on sublime there. </p>
 
 	<h1>Journal entry two - 9/26/23 </h1>
 	<p>
@@ -81,5 +81,8 @@
 	4. What’s the difference between ‘==’, ‘===’, and ‘=’
 	One = is used to assign a value to the variable. 2 (double) is used to check if values are equal after they are being converted to something or changed. 3 is used to compare equalities and it can check the value and type of something and see if its like true or false.
 	</p>
+	<h1>Journal entry six - 12/14/23 </h1>
+	<p>
+	My snowman project is a snowman where when you click on one of the elements above the snowman, you can decorate the snowman with them. I started by making divs and putting in images for my snowman and for all of my decorations. Once all of the images for the decorations were created I made an event listener so when someone clicks on the decoration and the snowman, the decoration will appear where the click is. I made a new variable called feature and added event listeners for all of the toppings under feature so when the snowman is clicked on, the div/topping will be created only on the snowman. I'm still working on sizing the decorations so they are all in accurate proportions, but my main challenge was de-bugging my code because the toppings originally didn't appear when clicked.
 </body>
 </html>
