--- a/projects.html
+++ b/projects.html
@@ -67,6 +67,9 @@
 <a href="Dadbday.html">⭑here is a link</a> to my sixth project.
 
 </p>
+<a href="snowman.html">⭑here is a link</a> to my seventh project.
+
+</p>
 
 
 
