--- a/journal.html
+++ b/journal.html
@@ -84,5 +84,10 @@
 	<h1>Journal entry six - 12/14/23 </h1>
 	<p>
 	My snowman project is a snowman where when you click on one of the elements above the snowman, you can decorate the snowman with them. I started by making divs and putting in images for my snowman and for all of my decorations. Once all of the images for the decorations were created I made an event listener so when someone clicks on the decoration and the snowman, the decoration will appear where the click is. I made a new variable called feature and added event listeners for all of the toppings under feature so when the snowman is clicked on, the div/topping will be created only on the snowman. I'm still working on sizing the decorations so they are all in accurate proportions, but my main challenge was de-bugging my code because the toppings originally didn't appear when clicked.
+	</p>
+	<h1>Journal entry seven - 1/9/24 </h1>
+	<p>
+	In class today we made a randomizer that chooses random names. I first made a variable called "people" which stores the 6 people (numbered 0-5) in our class. I then made a variable called "x" that basically makes it choose a random number and because I wrote *5, it chooses a number between 0 and 5. I added "round" so the numbers are rounded numbers. I then put the variable "x" under console log under people, so it chooses a random person. Because the people are numbered from 0-5 and the variable "x" is *5, it randomly chooses one of the people.
+	</p>
 </body>
 </html>
