--- a/projects.html
+++ b/projects.html
@@ -63,19 +63,27 @@
 <a href="jumpscare.html">⭑here is a link</a> to my halloween project.
 
 </p>
+
 <p>
 <a href="Dadbday.html">⭑here is a link</a> to my dad's bday card.
 
 </p>
+
+<p>
 <a href="snowman.html">⭑here is a link</a> to my snowman project.
 
 </p>
+<p>
 <a href="mombday.html">⭑here is a link</a> to my mom's bday card.
 
 </p>
-<a href="slideshowindex.html">⭑here is a link</a> to my mom's bday card.
+
+<p>
+<a href="slideshowindex.html">⭑here is a link</a> to my slideshow.
 
 </p>
+
+<p>
 <a href="recipegenerator.html">⭑here is a link</a> to my recipe generator.
 
 </p>
