--- a/journal.html
+++ b/journal.html
@@ -93,6 +93,10 @@
 	<p>
 	Today I finished my recipe generator. It basically uses the same process as the name randomizer, but instead the corresponding photos and links are listed under the same number. This makes it so when the randomizer chooses a number, the link and photo both show up. This class I worked on making the images show up, and I did this by calling the div and variable different names, and I also formatted it so the photos and links show up in seperate boxes.
 	</p>
+	<h1>Journal entry nine - 2/1/24 </h1>
+	<p>
+	Today we used event listeners to make cars move using keys. Thea and I made matching pink porsches. We 
+	</p>
 
 </body>
 </html>
