--- a/projects.html
+++ b/projects.html
@@ -87,6 +87,12 @@
 <a href="recipegenerator.html">⭑here is a link</a> to my recipe generator.
 
 </p>
+<a href="car.html">⭑here is a link</a> to my car.
+
+</p>
+<a href="input2.html">⭑here is a link</a> to my random generator project.
+
+</p>
 
 
 
