--- a/grandmabday.html
+++ b/grandmabday.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alkalami&family=Bungee+Spice&family=Courgette&family=Overpass:ital,wght@1,700;1,900&family=Roboto+Condensed:ital,wght@1,700&family=Sora&display=swap" rel="stylesheet">
 	<h1>
-		Click on the present!
+		Click on the heart to see a Valentine's Day surprise!
 	</h1>
 
 	<title></title>
@@ -30,7 +30,7 @@ body{
 			height:400px;
 			background-size:contain;
 			background-repeat: no-repeat;
-			background-image:url(https://i.pinimg.com/originals/1e/f4/db/1ef4db9a695c277bdd2c09907a943045.png);
+			background-image:url(https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_coraz%C3%B3n.svg/2048px-Heart_coraz%C3%B3n.svg.png);
 		}
 	</style>
 </head>
@@ -59,22 +59,14 @@ body{
 		}
 		if (count == 4){
 			present.style.backgroundImage ="url(famsilo.jpg)"
-		}
-		if (count == 5){
-			present.style.backgroundImage ="url()"
-		}
-		if (count == 6){
-			present.style.backgroundImage ="url()"
-		}
-		if (count == 7){
-			present.style.backgroundImage ="url()"
+
 		}
 	})
 
 
 	
 </script>
-<p>Happy birthday Grandma and Grandpa! I love you so much.🎉🎂✨🍰🥳
+<p>Happy Valentines Day Grandma and Grandpa! I love you so much.💖❤️✨
 	<br>Love,
 	<br>Julia<p/>
 </body>
