--- a/journal.html
+++ b/journal.html
@@ -95,8 +95,17 @@
 	</p>
 	<h1>Journal entry nine - 2/1/24 </h1>
 	<p>
-	Today we used event listeners to make cars move using keys. Thea and I made matching pink porsches. We 
+	Today we used event listeners to make cars move using keys. Thea and I made matching pink porsches which was so fun. I also finished my slideshow which I found really cool to try a new thing out. I'm definitely planning on making more slideshows like that in the future. My slideshow looks very funny and I enjoyed making it.
 	</p>
+	<h1>Journal entry ten - 2/14/24 </h1>
+	<p>
+	I finished my Valentines project! It's very similar to my Mom's bday project, but because I missed a class, I didn't have a lot of time to make a brand new idea. I just started a project that flips and transforms images of me with my camp friends which I can't wait to finish and show them.
+	</p>
+	<h1>Journal entry eleven - 2/22/24 </h1>
+	<p>
+	Today we worked on a color generator in class. I learned that RGB has 3 values that range to 255! We also went over math.random which was super helpful in randomizing numbers for our color generators.
+	</p>
+
 
 </body>
 </html>
