--- a/projects.html
+++ b/projects.html
@@ -84,13 +84,19 @@
 </p>
 
 <p>
-<a href="recipegenerator.html">⭑here is a link</a> to my recipe generator.
+<a href="recipegenerator.html">⭑here is a link</a> to my recipe generator/array project.
 
 </p>
 <a href="car.html">⭑here is a link</a> to my car.
 
 </p>
 <a href="input2.html">⭑here is a link</a> to my random generator project.
+
+</p>
+<a href="grandmabday.html">⭑here is a link</a> to my Valentines Day project.
+
+</p>
+<a href="color.html">⭑here is a link</a> to my color generator project.
 
 </p>
 
