--- a/valentines.html
+++ b/valentines.html
@@ -30,7 +30,8 @@ rel="stylesheet">
       flex-wrap: wrap;
       display: flex;
       justify-content: center;
-      background-color: ghostwhite;
+      /*background-color: ghostwhite; 
+      how do i get this to work?*/
     }
     .box {
       display: inline-block;
