--- a/color.html
+++ b/color.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-click or scroll on the bar to make a new color!
+click on the page or scroll on the bar to make a new color!
 <head>
 	
 	<title></title>
