--- a/grandmabday.html
+++ b/grandmabday.html
@@ -20,7 +20,7 @@ body{
 		background-color:lightpink;
 		font-family: 'Courgette', cursive;
 		text-decoration: none;
-				color:floralwhite;
+				color:darkred;
 		font-size: 35px;
 
 }
