--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
 </p>
 
 <p>
-<a href="slideshowindex.html">⭑here is a link</a> to my slideshow.
+<a href=./slideshow1/index2.html>⭑here is a link</a> to my slideshow.
 
 </p>
 
