adding final project ideas

--- a/recipegenerator.html
+++ b/recipegenerator.html
@@ -22,6 +22,7 @@
 			position:relative;
 			top:0px;
 			left:0px;
+			display:block;
 		
 		}
 		body{
@@ -29,13 +30,23 @@
 		}
 
 
+		#whatever{
+/*			left:20px;*/
+/*background-color:green;*/
+		padding:70px;
+			width:200px;
+			height:200px;
+			text-align:center;
+			position:fixed;
 		}
 	</style>
 </head>
 <body>
 	<center><h1>click to see what to make!</h1>
 	<div class="squares" id="box1">
+		<div id='whatever'>
 		<span id="text1"></span>
+	</div>
 		
 	</div>
 	<div class="squares" id="box2">
@@ -53,7 +64,7 @@
 		text1.innerText = recipes[random];
 		box2.style.backgroundImage = food[random];
 		box1.style.top = "0px";
-		text0.innerText = "picturespicturespicturespictupicturespicturesrespicturespictures"
+		// text0.innerText = "picturespicturespicturespictupicturespicturesrespicturespictures"
 
 	})
 
