adding final project ideas

--- a/journal.html
+++ b/journal.html
@@ -95,7 +95,7 @@
 	</p>
 	<h1>Journal entry nine - 2/1/24 </h1>
 	<p>
-	Today we used event listeners to make cars move using keys. Thea and I made matching pink porsches which was so fun. I also finished my slideshow which I found really cool to try a new thing out. I'm definitely planning on making more slideshows like that in the future. My slideshow looks very funny and I enjoyed making it.
+	Today we used event listeners to make cars move using keys. I made a div labeled "car" and an eventlistener using "keypress" so when a specific key is pressed the car moves. I used if statements to make the car move. Thea and I made matching pink porsches which was so fun. I also finished my slideshow which I found really cool to try a new thing out. I'm definitely planning on making more slideshows like that in the future. My slideshow looks very funny and I enjoyed making it.
 	</p>
 	<h1>Journal entry ten - 2/14/24 </h1>
 	<p>
@@ -104,6 +104,23 @@
 	<h1>Journal entry eleven - 2/22/24 </h1>
 	<p>
 	Today we worked on a color generator in class. I learned that RGB has 3 values that range to 255! We also went over math.random which was super helpful in randomizing numbers for our color generators.
+	</p>
+
+	<h1>Journal entry twelve - 2/22/24 </h1>
+	<p>
+	These are my final project ideas:
+	1. pink porshe driving game (crossy road)
+	2. Sza universe - everytime you click on a planet a different album/song plays and the mouse is a rocket ship
+	3. DIY nail salon with designs
+	4. cat slide show/origin story
+	5. joint story with thea and her cat - think of a funny story
+	6. Teach younger kids/1st programmers the car code
+	7. DIY your own celcius flavor
+	8. hover over a box and see a different sunset image
+	9. build your own outfit - have a rack for jewelry, pants and tops and drag them together
+	10. map of the world and when you hover over each place, photos i took from that place come up
+			- can also do with sunsets
+			- can do with mountains and where I've skied
 	</p>
 
 
