--- a/journal.html
+++ b/journal.html
@@ -122,6 +122,10 @@
 			- can also do with sunsets
 			- can do with mountains and where I've skied
 	</p>
+	<h1>Journal entry thirteen - 3/14/24 </h1>
+	<p>
+	Today in class Thea and I started our Szaverse. I downloaded all of the songs and found and edited all of the planets, and thea started building the code by positioning all of the planets. We are making 8 planets and making it so when you click on a planet, a specific song plays. In the middle we will put the sun with Sza's face on it. After break we will upload the specific images per planet and the corresponding audios and that will be the base of our project. We will then change the size of the planet divs so some planets are the right size and bigger than others.
+	</p>
 
 
 </body>
