adding journal entries

--- a/journal.html
+++ b/journal.html
@@ -126,6 +126,19 @@
 	<p>
 	Today in class Thea and I started our Szaverse. I downloaded all of the songs and found and edited all of the planets, and thea started building the code by positioning all of the planets. We are making 8 planets and making it so when you click on a planet, a specific song plays. In the middle we will put the sun with Sza's face on it. After break we will upload the specific images per planet and the corresponding audios and that will be the base of our project. We will then change the size of the planet divs so some planets are the right size and bigger than others.
 	</p>
+	
+	<h1>Journal entry fifteen - 5/9/24 </h1>
+	<p>
+	Today in class we worked on the stars in our project. We made a link for them after we styled them and then we made it so they appear randomly all over the screen. We also used the math.random function to set a minumum and a maximum for the size of the starts. The last thing that we did was made a google slide for our project which we will continue in the next class.
+	</p>
+	<h1>Journal entry sixteen - 5/14/24 </h1>
+	<p>
+	Today we added some final touches to our project. We moved around some of the planets to balance them out throughout the screen by just adjusting the sizing values. We then attatched the link from glitch onto our project page and started working on our slideshow. I made a slide about the inspiration and next class I will make a slide about the challenges that we overcame when making our project. I will also import actual photos of our szaverse into the slideshow.
+	</p>
+	<h1>Journal entry seventeen - 5/16/24 </h1>
+	<p>
+	Today I worked on the slideshow. I went through the code to brainstorm challenges and then I wrote about 2 of the challenges that we had. I wrote about how we originally had trouble figuring out how to code together because we originally tried using Sublime which didn't let us collaborate on the code at the same time. We eventually learned how to use Glitch to code at the same time on the same project which made coding together a lot easier. The second challenge that I wrote about was how we made the stars. Making the stars was challenging because we originally tried to make each star individually. We realized that this wouldn't work because of the amount of stars that we would have to make. We learned to code for all of the stars at once, using a function and then we could style all of the stars at once. Next class I will add the final touches to the slideshow.
+	</p>
 
 
 </body>
