--- a/szauniverse.html
+++ b/szauniverse.html
@@ -1,1 +1,125 @@
-szauniverse.html
+<!DOCTYPE html>
+<html>
+<head>
+<title>SZA Universe</title>
+
+<style type="text/css">
+	body{
+	background-image:
+	url(galaxy.jpg);
+	background-size: cover;
+	}
+.planet{
+height:200px;
+width:200px;
+/*background-image: url(saturn.png);*/
+display: inline-block;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+margin: 10px;
+position: absolute;
+
+}
+
+		#neptune{
+			background-image: url(neptune.png);
+            top: 25px;
+            left: 5px;
+        }
+
+        #mars{
+        	background-image: url(mars.png);
+            top: 100px;
+            left: 300px;
+        }
+
+        #saturn{
+        	background-image: url(saturn.png);
+            top: 50px;
+            left: 900px;
+            width:250px;
+        	height:300px;
+        }
+
+        #venus{
+        	background-image: url(venus.png);
+        	top: 350px;
+        	left:50px
+        }
+
+        #sun{
+        	background-image: url(sun.png);
+        	top:170px;
+        	left:500px;
+        	width:350px;
+        	height:400px;
+        }
+
+        #mercury{
+        	background-image: url(mercury.png);
+        	top:425px;
+        	left:850px;
+        }
+
+        #jupiter{
+        	background-image: url(jupiter.png);
+        	top:250px;
+        	left:1100px;
+        	width:300px;
+        	height:400px;
+        }
+
+        #earth{
+        	background-image: url(earth.png);
+        	top:550px;
+        	left:350px;
+        }
+
+        #uranus{
+        	background-image: url(uranus.png);
+        	top:625px;
+        	left:450;
+        }
+        .text{
+position:relative;
+top: -10%;
+color:mediumpurple;
+font-family: 'Averia Serif Libre';
+
+
+
+
+}
+
+a{
+text-decoration:none;
+}
+body {
+background: #0000;
+color: mediumpurple;
+}
+
+</style>
+</head>
+<body>
+<center>
+
+<h1> SZAVERSE </h1>
+
+<div id = "neptune" class="planet"></div>
+<div id = "mars" class="planet"></div>
+<div id = "saturn" class="planet"></div>
+<div id = "venus" class="planet"></div>
+
+<div id = "sun" class="planet"></div>
+
+<div id = "mercury" class="planet"></div>
+<div id = "jupiter" class="planet"></div>
+<div id = "earth" class="planet"></div>
+<div id = "uranus" class="planet"></div>
+
+</center>
+
+</body>
+</html>
