adding final project

--- a/journal.html
+++ b/journal.html
@@ -139,6 +139,10 @@
 	<p>
 	Today I worked on the slideshow. I went through the code to brainstorm challenges and then I wrote about 2 of the challenges that we had. I wrote about how we originally had trouble figuring out how to code together because we originally tried using Sublime which didn't let us collaborate on the code at the same time. We eventually learned how to use Glitch to code at the same time on the same project which made coding together a lot easier. The second challenge that I wrote about was how we made the stars. Making the stars was challenging because we originally tried to make each star individually. We realized that this wouldn't work because of the amount of stars that we would have to make. We learned to code for all of the stars at once, using a function and then we could style all of the stars at once. Next class I will add the final touches to the slideshow.
 	</p>
+	<h1>Journal entry eighteen - 5/23/24 </h1>
+	<p>
+	Today Thea and I added finishing touches to the slideshow. We animated all of the slides and added/edited some of the images in the slideshow. We really like how our slideshow looks because of the galaxy theme and we might present today. I am now going to push my project online!!
+	</p>
 
 
 </body>
