--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@
 </p>
 
 <p>
-<a href="https://raspy-spicy-hip.glitch.me">⭑here is a link</a> to my final project.
+<a href="https://raspy-spicy-hip.glitch.me">⭑here is a link</a> to Thea and my final project.
 
 </p>
 
